# haizhi-rust-rocksdb

./: .gitmodules  CHANGELOG.md  Cargo.toml  save
.github/workflows/: rust.yml
haizhi-librocksdb-sys/: Cargo.toml  README.md  build.rs
haizhi-librocksdb-sys/tests/: ffi.rs
librocksdb-sys/: Cargo.toml
librocksdb-sys/tests/: ffi.rs
src/: backup.rs  checkpoint.rs  db.rs  db_iterator.rs  db_options.rs  event_listener.rs  ffi_util.rs  lib.rs  merge_operator.rs  properties.rs  snapshot.rs  write_batch.rs
src/transactions/: optimistic_transaction_db.rs  transaction_db.rs
tests/: test_approximate.rs  test_backup.rs  test_checkpoint.rs  test_column_family.rs  test_compactionfilter.rs  test_comparator.rs  test_compationfilter.rs  test_db.rs  test_iterator.rs  test_merge_operator.rs  test_multithreaded.rs  test_optimistic_transaction_db.rs  test_optimistic_transaction_db_memory_usage.rs  test_pinnable_slice.rs  test_property.rs  test_raw_iterator.rs  test_rocksdb_options.rs  test_slice_transform.rs  test_sst_file_writer.rs  test_transaction_db.rs  test_transaction_db_memory_usage.rs  test_transaction_db_property.rs  test_write_batch.rs
tests/fail/: checkpoint_outlive_db.rs  checkpoint_outlive_db.stderr  iterator_outlive_db.rs  iterator_outlive_db.stderr  open_with_multiple_refs_as_single_threaded.rs  open_with_multiple_refs_as_single_threaded.stderr  snapshot_outlive_db.rs  snapshot_outlive_db.stderr  snapshot_outlive_transaction.rs  snapshot_outlive_transaction.stderr  snapshot_outlive_transaction_db.rs  snapshot_outlive_transaction_db.stderr  transaction_outlive_transaction_db.rs  transaction_outlive_transaction_db.stderr
tests/util/: mod.rs
