[package]
name = "haizhi-rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database"
version = "0.2.0"
edition = "2021"
rust-version = "1.71.1"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>"]
repository = "https://github.com/rust-rocksdb/rust-rocksdb"
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/rust-rocksdb/rust-rocksdb"
exclude = [".gitignore", ".travis.yml", "deploy.sh", "test/**/*"]

[workspace]
members = ["librocksdb-sys"]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2", "bindgen-runtime"]
jemalloc = ["haizhi-librocksdb-sys/jemalloc"]
io-uring = ["haizhi-librocksdb-sys/io-uring"]
valgrind = []
mt_static = ["haizhi-librocksdb-sys/mt_static"]
snappy = ["haizhi-librocksdb-sys/snappy"]
lz4 = ["haizhi-librocksdb-sys/lz4"]
zstd = ["haizhi-librocksdb-sys/zstd"]
zlib = ["haizhi-librocksdb-sys/zlib"]
bzip2 = ["haizhi-librocksdb-sys/bzip2"]
rtti = ["haizhi-librocksdb-sys/rtti"]
multi-threaded-cf = []
serde1 = ["serde"]
bindgen-runtime = ["haizhi-librocksdb-sys/bindgen-runtime"]
bindgen-static = ["haizhi-librocksdb-sys/bindgen-static"]
lto = ["haizhi-librocksdb-sys/lto"]

[dependencies]
libc = "0.2"
librocksdb-sys = { path = "librocksdb-sys", version = "0.2.0", default-features = false, features = [
    "static",
] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
trybuild = "1"
tempfile = "3.1"
pretty_assertions = "1.0"
bincode = "1.3"
serde = { version = "1", features = [ "derive" ] }
