[package]
name = "haizhi-rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database"
version = "0.2.8"
edition = "2018"
rust-version = "1.65"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>"]
repository = "https://github.com/haizhi-tech/haizhi-rust-rocksdb/"
license = "Apache-2.0"
categories = [ "database" ]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/haizhi-tech/haizhi-rust-rocksdb/"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[workspace]
members = ["librocksdb-sys"]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2", "serde1"]
jemalloc = ["haizhi-librocksdb-sys/jemalloc"]
io-uring = ["haizhi-librocksdb-sys/io-uring"]
valgrind = []
snappy = ["haizhi-librocksdb-sys/snappy"]
lz4 = ["haizhi-librocksdb-sys/lz4"]
zstd = ["haizhi-librocksdb-sys/zstd"]
zlib = ["haizhi-librocksdb-sys/zlib"]
bzip2 = ["haizhi-librocksdb-sys/bzip2"]
rtti = ["haizhi-librocksdb-sys/rtti"]
multi-threaded-cf = []
serde1 = ["serde"]

[dependencies]
libc = "0.2"
haizhi-librocksdb-sys = { path = "librocksdb-sys", version = "0.2.7" }
serde = { version = "1", features = [ "derive" ], optional = true }
serde_json = "1.0.0"

[dev-dependencies]
trybuild = "1.0"
tempfile = "3.1"
pretty_assertions = "1.0"
bincode = "1.3"
serde = { version = "1", features = [ "derive" ] }

[lib]
doctest = false
